5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1650_651.log
== SUBMITION (2019-04-23 18:40:00) 
-- CODE:
altura = float(input("altura em metros: "))
sexo = float(input("sexo: "))
sexo = sexo.lower()
if(sexo == "m") :
	peso = (72.2 * altura) - 58
	print(round(peso,2))
	print(sexo)
if(sexo == "f") :
	peso = (62.1 * altura) - 44.7
	print(round(peso,2))
	print(sexo)

-- EXECUTION TIME:
0.1675
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/651/main.py", line 2, in <module>
    sexo = float(input("sexo: "))
ValueError: could not convert string to float: 'F'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:40:18) 
-- CODE:
altura = float(input("altura em metros: "))
sexo = input("sexo: "))
sexo = sexo.lower()
if(sexo == "m") :
	peso = (72.2 * altura) - 58
	print(round(peso,2))
	print(sexo)
if(sexo == "f") :
	peso = (62.1 * altura) - 44.7
	print(round(peso,2))
	print(sexo)

-- EXECUTION TIME:
0.16037
-- ERROR:
  File "/home/codebench/codes/1650/651/main.py", line 2
    sexo = input())
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:40:50) 
-- CODE:
altura = float(input("altura em metros: "))
sexo = input("sexo: "))
sexo = sexo.upper()
if(sexo == "M") :
	peso = (72.2 * altura) - 58
	print(round(peso,2))
	print(sexo)
if(sexo == "F") :
	peso = (62.1 * altura) - 44.7
	print(round(peso,2))
	print(sexo)

-- EXECUTION TIME:
0.23539
-- ERROR:
  File "/home/codebench/codes/1650/651/main.py", line 2
    sexo = input())
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:40:56) 
-- CODE:
altura = float(input("altura em metros: "))
sexo = input("sexo: ")
sexo = sexo.upper()
if(sexo == "M") :
	peso = (72.2 * altura) - 58
	print(round(peso,2))
	print(sexo)
if(sexo == "F") :
	peso = (62.1 * altura) - 44.7
	print(round(peso,2))
	print(sexo)

-- EXECUTION TIME:
0.151098
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
F
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.09
M
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:41:18) 
-- CODE:
altura = float(input("altura em metros: "))
sexo = input("sexo: ")
sexo = sexo.upper()
if(sexo == "M") :
	peso = (72.7 * altura) - 58
	print(round(peso,2))
	print(sexo)
if(sexo == "F") :
	peso = (62.1 * altura) - 44.7
	print(round(peso,2))
	print(sexo)

-- EXECUTION TIME:
0.230735
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
F
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
M
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:41:19) 
-- CODE:
altura = float(input("altura em metros: "))
sexo = input("sexo: ")
sexo = sexo.upper()
if(sexo == "M") :
	peso = (72.7 * altura) - 58
	print(round(peso,2))
	print(sexo)
if(sexo == "F") :
	peso = (62.1 * altura) - 44.7
	print(round(peso,2))
	print(sexo)

-- EXECUTION TIME:
0.175994
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
F
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
17.4
F
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:41:19) 
-- CODE:
altura = float(input("altura em metros: "))
sexo = input("sexo: ")
sexo = sexo.upper()
if(sexo == "M") :
	peso = (72.7 * altura) - 58
	print(round(peso,2))
	print(sexo)
if(sexo == "F") :
	peso = (62.1 * altura) - 44.7
	print(round(peso,2))
	print(sexo)

-- EXECUTION TIME:
0.287242
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
F
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
M
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:41:19) 
-- CODE:
altura = float(input("altura em metros: "))
sexo = input("sexo: ")
sexo = sexo.upper()
if(sexo == "M") :
	peso = (72.7 * altura) - 58
	print(round(peso,2))
	print(sexo)
if(sexo == "F") :
	peso = (62.1 * altura) - 44.7
	print(round(peso,2))
	print(sexo)

-- EXECUTION TIME:
0.146813
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1650/651/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:41:30) 
-- CODE:
altura = float(input("altura em metros: "))
sexo = input("sexo: ")
sexo = sexo.upper()
if(sexo == "M") :
	peso = (72.7 * altura) - 58
	print(round(peso,2))
	print(sexo)
if(sexo == "F") :
	peso = (62.1 * altura) - 44.7
	print(round(peso,2))
	print(sexo)

-- EXECUTION TIME:
0.234238
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
F
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
M
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:41:53) 
-- CODE:
altura = float(input("altura em metros: "))
sexo = input("sexo: ")
sexo = sexo.upper()
if(sexo == "M") :
	peso = (72.7 * altura) - 58
	print(round(peso,2))
	print(sexo)
if(sexo == "F") :
	peso = (62.1 * altura) - 44.7
	print(round(peso,2))
	print(sexo)

-- OUTPUT:
17.4
F
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:43:21) 
-- CODE:
altura = float(input("altura em metros: "))
sexo = input("sexo: ")
sexo = sexo.upper()
if(sexo == "M") :
	peso = (72.7 * altura) - 58
	print(round(peso,2))
	print(sexo)
if(sexo == "F") :
	peso = (62.1 * altura) - 44.7
	print(round(peso,2))
	print(sexo)

-- OUTPUT:
17.4
F
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:43:44) 
-- CODE:
altura = float(input("altura em metros: "))
sexo = input("sexo: ")
sexo = sexo.upper()
if(sexo == "M") :
	peso = (72.7 * altura) - 58
	print(round(peso,2))
	
if(sexo == "F") :
	peso = (62.1 * altura) - 44.7
	print(round(peso,2))
	

-- EXECUTION TIME:
0.225643
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
